# drift

./: .drift.yaml  .gitignore  CONTRIBUTING.md  LICENSE  Makefile  README.md  pyproject.toml
.github/workflows/: ci.yml
src/drift/: __init__.py  config.py  main.py  reporter.py
src/drift/rules/: circular_import.py  file_limits.py  import_rule.py
src/drift/scanner/: base.py  javascript.py  python.py
tests/: test_config.py  test_main.py
tests/rules/: test_circular_import.py  test_file_limits.py  test_import_rule.py
tests/scanner/: test_javascript.py  test_python.py
