[project]
name = "drift"
version = "0.1.0"
description = "Architecture decay detector — catch your codebase drifting into chaos before it ships"
readme = "README.md"
requires-python = ">=3.11"
license = "MIT"
keywords = ["architecture", "lint", "static-analysis", "imports", "circular-dependencies"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Software Development :: Quality Assurance",
]
dependencies = [
    "pyyaml>=6.0",
]

[project.urls]
Homepage = "https://github.com/maximillions-dev/drift"
Source = "https://github.com/maximillions-dev/drift"
"Bug Tracker" = "https://github.com/maximillions-dev/drift/issues"

[project.scripts]
drift = "drift.main:main"

[build-system]
requires = ["setuptools>=64"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
addopts = "-v --tb=short"
